# ChangeLog for app-emacs/flim
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/flim/ChangeLog,v 1.28 2007/10/15 22:02:27 opfer Exp $

  15 Oct 2007; Christian Faulhammer <opfer@gentoo.org> flim-1.14.8.ebuild:
  stable amd64, bug 195107

  11 Oct 2007; Ulrich Mueller <ulm@gentoo.org> -flim-1.14.6.ebuild,
  -flim-1.14.7.ebuild:
  Remove old.

  11 Oct 2007; Lars Weiler <pylon@gentoo.org> flim-1.14.8.ebuild:
  stable ppc, bug #195107

  08 Oct 2007; Raúl Porcel <armin76@gentoo.org> flim-1.14.8.ebuild:
  alpha/sparc stable wrt #195107

  08 Oct 2007; Christian Faulhammer <opfer@gentoo.org> flim-1.14.8.ebuild:
  stable x86, bug 195107

  06 Oct 2007; Ulrich Mueller <ulm@gentoo.org> flim-1.14.6.ebuild,
  flim-1.14.7.ebuild, flim-1.14.8.ebuild:
  Minor QA: quote some variables. Add a die command.

  15 May 2007; Ulrich Mueller <ulm@gentoo.org> flim-1.14.6.ebuild,
  flim-1.14.7.ebuild, flim-1.14.8.ebuild:
  Don't provide virtual/flim, it is a new-style virtual now.

  15 May 2007; Ulrich Mueller <ulm@gentoo.org> flim-1.14.6.ebuild,
  flim-1.14.7.ebuild, flim-1.14.8.ebuild:
  Prepare for new-style virtual/flim: change blocking dependency from
  !virtual/flim to !app-emacs/limit.

  23 Apr 2007; Christian Faulhammer <opfer@gentoo.org> flim-1.14.8.ebuild:
  remove virtual/emacs from DEPEND, it is already pulled in by elisp.eclass;
  exchanged hard coded part of SITEFILE with PN variable

  30 Mar 2007; Fabian Groffen <grobian@gentoo.org> flim-1.14.6.ebuild,
  flim-1.14.7.ebuild, flim-1.14.8.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  13 Mar 2007; Christian Faulhammer <opfer@gentoo.org> flim-1.14.6.ebuild,
  flim-1.14.7.ebuild, flim-1.14.8.ebuild:
  adjusted DESCRIPTION in all three; added a lot of quotes and refinements
  (make -> emake) to the latest testing

  07 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  files/60flim-gentoo.el: